Feature xyz for DEV

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-    <h1>This is a Devops Docker</h1>
-    <p>This is a Anas.</p>
+    <h1>This is a Devops Docker pro</h1>
+    <p>This is a Anas</p>
 
 </body>
 </html>
