--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <h1>This is a Devops Docker pro</h1>
+    <h1>This is a Devops Docker project</h1>
     <p>This is a Anas</p>
 
 </body>
